--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,8 @@ jobs:
 
     - name: Build
       run: npm run build
+      env:
+        VITE_OPEN_WEATHER_API_KEY: ${{ secrets.VITE_OPEN_WEATHER_API_KEY }}
 
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@4.1.4
